"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2008-11-11	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-57:
	  enhancement: module::__allocate_unique(), now calls 
		state_manager::optimize_pools() to conver list_vector
		into a monolithic array for constant-time accesses.
	  see also util/ChangeLog -- for util::list_vector additions


2008-11-11	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-56:
	  Massive cleanup: perm'd ENABLE_RELAXED_TEMPLATE_PARAMETERS, 
		removing about 1000 lines of deprecated code.


	* HACKT-00-01-04-main-00-82-55:
	  Critical bug fix: (ACX-PR-1611)
		internal aliases were not being replayed for relaxed-typed
			instances, resulting in missing aliases.
		Fixed, added test cases.


2008-11-10	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-54:
	  Minor clean-up: PRS_footprint_expr_pool_type is now
		based on plain std::vector instead of util::list_vector.
	  prsim: perm'd PRSIM_CHANNEL_SUPPORT.


2008-11-07	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-53:
	  Implemented diagnostic commands in hacprsim:
		rules[-verbose] proc -- print all rules belonging to process
		allrules[-verbose] -- print ALL rules in simulation
		invariants[-verbose] proc -- invariants belonging to process
		allinvariants[-verbose] -- print ALL invariants in simulation
	  parser/instref.cc: added parse_process_to_index()
	  State-prsim.cc: provide dump_canonical_node_name() and
		dump_canonical_process_name() for direct use of ostream&.
	  Documented and tested.


	* HACKT-00-01-04-main-00-82-52:
	  Fix: expr-alloc of invariant exprs was broken in last rev. :(
	  prsim command: check-invariants -- checks ALL invariants NOW
	  Added more invariant tests.


2008-11-06	David Fang		<fangism@users.sourceforge.net>
